--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: calidad
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Evalúa la calidad de las estimaciones hechas por encuestas de hogares 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Klaus Lehmann
+Maintainer: Klaus Lehmann <klehmann@fen.uchile.cl>
+Description: El paquete evalúa la calidad de estimaciones hechas por encuestas de hogares, 
+    siguiendo la metodología desarrollada por el Instituto Nacional de Estadísticas. Es
+    posible implementar la evaluación para estimaciones de media y de proporción. 
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
