actualizar funciones obsoletas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(crear_insumos)
 export(crear_insumos_prop)
 export(evaluacion_calidad)
 export(evaluacion_calidad_prop)
+import(survey)
 importFrom(magrittr,`%>%`)
