--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(crear_insumos_prop)
 export(crear_insumos_tot)
 export(evaluacion_calidad)
 export(evaluacion_calidad_prop)
+export(evaluacion_calidad_tot)
 export(tabla_html)
 import(kableExtra)
 import(survey)
