agregar intervalos de confianza para ene"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(crear_insumos_prop)
 export(crear_insumos_tot)
 export(crear_insumos_tot_con)
 export(evaluar_calidad_media)
+export(evaluar_calidad_mediana)
 export(evaluar_calidad_prop)
 export(evaluar_calidad_tot)
 export(evaluar_calidad_tot_con)
