--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,14 @@
 
 export(create_mean)
 export(create_median)
-export(create_prop)
+export(create_ratio)
 export(create_tot)
 export(create_tot_con)
 export(evaluate_mean)
 export(evaluate_median)
-export(evaluate_prop)
+export(evaluate_ratio)
 export(evaluate_tot)
 export(evaluate_tot_con)
 export(tabla_html)
 import(kableExtra)
 import(survey)
-importFrom(magrittr,`%>%`)
