--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
         email = "klehmann@fen.uchile.cl"),
       person(given = "Ricardo",
         family = "Pizarro",
-        role = c("ctb")),
+        role = c("aut", "cre")),
       person(given = "Ignacio",
         family = "Agloni",
         role = c("ctb"))
