cambiar nombre variable evaluate_prop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(create_tot)
 export(create_tot_con)
 export(evaluate_mean)
 export(evaluate_median)
-export(evaluate_ratio)
+export(evaluate_prop)
 export(evaluate_tot)
 export(evaluate_tot_con)
 export(tabla_html)
