trabajar en arreglar los ejemplos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,7 @@ export(evaluate_prop)
 export(evaluate_tot)
 export(evaluate_tot_con)
 export(tabla_html)
+import(itertools)
 import(kableExtra)
 import(survey)
+import(tidyr)
