eliminar warnings y notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ LazyData: true
 RoxygenNote: 7.1.1
 Suggests: knitr, rmarkdown, testthat
 VignetteBuilder: knitr
+Depends: R (>= 3.5.0)
 Imports: 
     rlang,
     dplyr,
@@ -34,6 +35,7 @@ Imports:
     glue,
     digest,
     itertools,
+    iterators,
     tidyr
 
 
