--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(evaluate_prop)
 export(evaluate_tot)
 export(evaluate_tot_con)
 export(tabla_html)
+import(iterators)
 import(itertools)
 import(kableExtra)
 import(survey)
