agregar funciones size y total

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(create_mean)
 export(create_median)
 export(create_prop)
+export(create_size)
 export(create_tot)
 export(create_tot_con)
+export(create_total)
 export(evaluate_mean)
 export(evaluate_median)
 export(evaluate_prop)
+export(evaluate_size)
 export(evaluate_tot)
 export(evaluate_tot_con)
 export(tabla_html)
