creacion de funcion generica para evaluar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(create_median)
 export(create_prop)
 export(create_size)
 export(create_total)
-export(evaluate_mean)
+export(evaluate)
 export(evaluate_median)
 export(evaluate_prop)
 export(evaluate_size)
