reparar comentarios de cran

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: calidad
 Type: Package
-Title: The Package Assesses the Quality of Estimates Made by Complex Sample Designs
+Title: Quality of Estimates Made by Complex Sample Designs
 Version: 0.1.0
 Authors@R: c(
       person(given = "Klaus",
@@ -10,15 +10,17 @@ Authors@R: c(
       person(given = "Ricardo",
         family = "Pizarro",
         role = c("ctb"),
-        email = "rapizarros@ine.gob.cl"
+        email = "ricpizarros@gmail.com"
         ),
       person(given = "Ignacio",
         family = "Agloni",
         role = c("ctb"))
     )
 Description: Assesses the quality of estimates made by complex sample designs,
-  following the methodology developed by the National Institute of Statistics Chile and by Economic Commission  for Latin America and
-  Caribbean (eclac). 
+  following the methodology developed by the National Institute of Statistics Chile 
+  (<https://www.ine.cl/docs/default-source/institucionalidad/buenas-pr%C3%A1cticas/clasificaciones-y-estandares/est%C3%A1ndar-evaluaci%C3%B3n-de-calidad-de-estimaciones-publicaci%C3%B3n-27022020.pdf>)
+  and by Economic Commission for Latin America and
+  Caribbean (<https://repositorio.cepal.org/bitstream/handle/11362/45681/S2000293_es.pdf?sequence=4&isAllowed=y>). 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
