--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,12 +17,13 @@ Authors@R: c(
         role = c("ctb"))
     )
 Description: Assesses the quality of estimates made by complex sample designs,
-  following the methodology developed by the National Institute of Statistics Chile and by Economic Commission  for Latin America and
-  Caribbean (eclac). 
+  following the methodology developed by the National Institute of Statistics Chile (2020, <https://www.ine.cl/docs/default-source/institucionalidad/buenas-pr%C3%A1cticas/clasificaciones-y-estandares/est%C3%A1ndar-evaluaci%C3%B3n-de-calidad-de-estimaciones-publicaci%C3%B3n-27022020.pdf>)
+  and by Economic Commission  for Latin America and
+  Caribbean (2020, <https://repositorio.cepal.org/bitstream/handle/11362/45681/1/S2000293_es.pdf>). 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1
 Suggests: knitr, rmarkdown, testthat
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
@@ -35,5 +36,3 @@ Imports:
     stringr,
     tidyr,
     haven
-
-
