--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(create_prop)
 export(create_size)
 export(create_total)
 export(evaluate)
+import(haven)
 import(kableExtra)
 import(survey)
 import(tidyr)
