--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
         email = "klehmann@fen.uchile.cl"),
       person(given = "Ricardo",
         family = "Pizarro",
-        role = c("ctb", "cre"),
+        role = c("aut"),
         email = "rapizarros@ine.gob.cl"
         ),
       person(given = "Ignacio",
