--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(create_mean)
 export(create_prop)
 export(create_size)
 export(create_total)
+export(eclac_standard)
 import(haven)
 import(kableExtra)
 import(survey)
-import(tidyr)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
