--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: calidad
 Type: Package
 Title: Assesses the Quality of Estimates Made by Complex Sample Designs
-Version: 0.4.0
+Version: 0.5.0
 Authors@R: c(
       person(given = "Klaus",
         family = "Lehmann",
@@ -30,8 +30,8 @@ Authors@R: c(
     )
 Description: Assesses the quality of estimates made by complex sample designs,
   following the methodology developed by the National Institute of Statistics Chile (2020, <https://www.ine.cl/docs/default-source/institucionalidad/buenas-pr%C3%A1cticas/clasificaciones-y-estandares/est%C3%A1ndar-evaluaci%C3%B3n-de-calidad-de-estimaciones-publicaci%C3%B3n-27022020.pdf>)
-  and by Economic Commission  for Latin America and
-  Caribbean (2020, <https://repositorio.cepal.org/bitstream/handle/11362/45681/1/S2000293_es.pdf>). 
+  and by Economic Commission  for Latin America and 
+  Caribbean (2020, <https://repositorio.cepal.org/bitstream/handle/11362/45681/1/S2000293_es.pdf>), (2024, https://repositorio.cepal.org/server/api/core/bitstreams/f04569e6-4f38-42e7-a32b-e0b298e0ab9c/content)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
